--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ openai_key.txt
 # Ignore dataset - We should ideally have a script to download the PDF, then
 # process it.
 dataset/*
+
+# Milvus stuff
+volumes/*
+embedEtcd.yaml
+user.yaml
